--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <title>Transliterace</title>
 
-  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <script src="jquery-3.3.1.min.js"></script>
 
 </head>
 
 <body>
 
-<div class="main">
+<!-- <div class="main"> -->
 <!--<h1>Transliterace</h1>-->
 
 
@@ -21,8 +22,17 @@
 
 <script src="autoExpand.js"></script>
 
-<span><input type="radio" name="lang" value="ru" checked>ruština</span>
-<span><input type="radio" name="lang" value="uk">ukrajinština</span>
+<!-- <div class="lang"> -->
+  <input type="radio" name="lang" value="ru" checked>
+  ruština
+  <img src="russian_federation_flag.gif">
+<!-- </div> -->
+
+<!-- <div class="lang"> -->
+  <input type="radio" name="lang" value="uk">
+  ukrajinština
+  <img src="ukraine_flag.gif">
+<!-- </div> -->
 
 
 
@@ -33,7 +43,7 @@
 
 <script src="loadDoc.js"></script>
 
-</div>
+<!-- </div> -->
 
 </body>
 
