rozdeleni do adresaru

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Transliterace</title>
 
-  <link rel="stylesheet" href="w3.css">
-  <link rel="stylesheet" href="style.css">
-  <script src="jquery-3.3.1.min.js"></script>
+  <link rel="stylesheet" href="css/w3.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/jquery-3.3.1.min.js"></script>
 
 </head>
 
@@ -27,7 +27,7 @@
   <label for="ru">
     <input class="w3-check" id="ru" type="radio" name="lang" value="ru" checked>
     ruština
-    <img src="russian_federation_flag.gif" class="w3-border w3-round" style="max-width:50px" alt="ru flag">
+    <img src="img/russian_federation_flag.gif" class="w3-border w3-round" style="max-width:50px" alt="ru flag">
   </label>
 </div>
 
@@ -35,7 +35,7 @@
   <label for="uk">
     <input class="w3-check" id="uk" type="radio" name="lang" value="uk">
     ukrajinština
-    <img src="ukraine_flag.gif" class="w3-border w3-round" style="max-width:50px" alt="uk flag">
+    <img src="img/ukraine_flag.gif" class="w3-border w3-round" style="max-width:50px" alt="uk flag">
   </label>
 </div>
 
@@ -56,7 +56,7 @@ $('#uk').click(function () {
 <div>
 <h4>Latinka</h4>
 <textarea id="output" rows='12' readonly></textarea>
-<script src="loadDoc.js"></script>
+<script src="js/loadDoc.js"></script>
 </div>
 
 <div class="tooltip">
