--- a/index.html
+++ b/index.html
@@ -84,10 +84,12 @@ function outFunc() {
 </script>
 </div>
 
-<!-- <div>
-  Autor aplikace: Matouš Ejem
-</div> -->
+</div>
 
+<div class="footer w3-dark-grey">
+  <p class="footer">
+    <a href="https://github.com/mejem/translit" target="_blank">zdrojový kód</a>
+  </p>
 </div>
 
 </body>
